Stable versions
---------------

4.1.6 ():

4.1.5 (20130527):
	Fix bugs reported by Andreas Falkenhahn:
	- fix OctaMED decay event and effect decoding
	- fix The Player 6.0A pattern depacking
	- fix Oktalyzer instrument to sample mapping

4.1.4 (20130519):
	- fix array initialization in IT loader (reported by Jacques Philippe)
	- remove regression tests from the distribution package
	- address license issues in  md5 digest code
	- address Visual C++ portability issues
	- code cleanup

4.1.3 (20130511):
	- fix envelope reset on new instrument (reported by ArtRemix)
	- fix JMP END sequences in MED synth wave table
	- fix IT portamento after note cut
	- fix IT and XM envelope resets
	- refactor virtual channel code
	- code cleanup

4.1.2 (20130504):
	- fix Graoumf Tracker arpeggio, set linear volume and set number
	  of frames effects (reported by Misty De Meo)
	- fix MTM sample fine tuning
	- fix unsigned conversion sample range when downmixing
	- fix memory leaks when attempting to load corrupted modules
	- refactor note slide effect code

4.1.1 (20130428):
	- add XM set envelope position effect
	- fix XM note with no instrument after keyoff
	- fix detection of compiler flags
	- fix library symbol versioning in OS X (by Douglas Carmichael)
	- fix loss of precision in portamento (reported by Misty De Meo)
	- fix OS X, Solaris and BeOS/Haiku build issues

4.1.0 (20130420):
	- add API call to fill equally-sized data chunks with PCM data
	- add configurable player parameter to disable sample loading
	- add configurable player parameter to set/get current module flags
	- changed maximum sampling rate to 49170 Hz
	- fix floating point values in lowpass filter
	- fix buffer overflow in MASI loader (reported by Douglas Carmichael)
	- fix simultaneous volume slide up and down
	- fix IT vs XM vibrato rate using quirk
	- fix IT portamento after note cut (reported by Benjamin Shadwick)
	- fix segfault in AMD module loader (reported by Jacques Philippe)