@@ -402,13 +402,13 @@ static int flt_load(struct module_data *m, FILE *f, const int start)
 	for (j = 0; j < (64 * 4); j++) {
 	    event = &EVENT(i, j % 4, j / 4);
 	    fread(mod_event, 1, 4, f);
-	    cvt_pt_event(event, mod_event);
+	    decode_noisetracker_event(event, mod_event);
 	}
 	if (mod->chn > 4) {
 	    for (j = 0; j < (64 * 4); j++) {
 		event = &EVENT(i, (j % 4) + 4, j / 4);
 		fread(mod_event, 1, 4, f);
-		cvt_pt_event(event, mod_event);
+		decode_noisetracker_event(event, mod_event);
 
 		/* no macros */
 		if (event->fxt == 0x0e)
