@@ -29,7 +29,8 @@ char *copy_adjust(char *, uint8 *, int);
 int test_name(uint8 *, int);
 void read_title(FILE *, char *, int);
 void set_xxh_defaults(struct xmp_module *);
-void cvt_pt_event(struct xmp_event *, uint8 *);
+void decode_protracker_event(struct xmp_event *, uint8 *);
+void decode_noisetracker_event(struct xmp_event *, uint8 *);
 void disable_continue_fx(struct xmp_event *);
 int check_filename_case(char *, char *, char *, int);
 void get_instrument_path(struct module_data *, char *, int);
