@@ -2,6 +2,7 @@ Stable versions
 ---------------
 
 4.1.6 ():
+	- ignore invalid Noisetracker effects
 
 4.1.5 (20130527):
 	Fix bugs reported by Andreas Falkenhahn:
